<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFBFB"
    tools:context=".AgregarNota">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#232323"
        app:layout_constraintTop_toTopOf="@+id/tituloNOTA"
        tools:ignore="NotSibling">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="726dp">

                <TextView
                    android:id="@+id/tituloNOTA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/registro_de_nota"
                    android:textColor="#FFFFFF"
                    android:textSize="34sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnBackNota"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:backgroundTint="#673AB7"
                    android:text="@string/back"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tituloNOTA"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/idTitleNota"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/titulo2"
                    android:minHeight="48dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="@color/white"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tituloNOTA" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtDescripcionNota"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:hint="@string/descripcionNota"
                    android:minHeight="48dp"
                    android:textColor="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.604"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/idTitleNota" />

                <Button
                    android:id="@+id/btnAgregarGrabacionTarea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="#4B673AB7"
                    android:text="@string/realizar_grabacionNota"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.509"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnAgregarRecordatorioTarea" />

                <Button
                    android:id="@+id/btnFechaHora"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="#6800BCD4"
                    android:text="@string/adjuntar_archivosNota"
                    android:textColor="#000000"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.518"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtDescripcionNota"
                    tools:ignore="TextContrastCheck" />

                <Button
                    android:id="@+id/btnAgregarRecordatorioTarea"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:backgroundTint="#468BC34A"
                    android:text="@string/agregar_recordatoriosNota"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.52"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnFechaHora" />

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:backgroundTint="#FFEB3B"
                    android:text="@string/guardarNota"
                    android:textColor="#000000"
                    android:textColorHint="#000000"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>